public/static/css/style.css
/* ... */
.home-header__hero--left,
.home-header__hero--right {
  -webkit-flex-basis: 50%;
  flex-basis: 50%;
}
.home-header__hero--right {
  position: relative;
}
@media only screen and (max-width: 80em) {
  .home-header__hero--right {
    display: none;
  }
  .arrow-svg {
    display: none;
  }
}
.home-header__hero .arrow-svg {
  position: absolute;
  left: 30rem;
  bottom: 42rem;
  width: 25rem;
}
.home-header__hero .arrow-svg path {
  stroke: var(--color-primary);
  fill: var(--color-primary);
  fill-opacity: 0;
  stroke-width: 0.4;
  stroke-dasharray: 1300;
  stroke-dashoffset: 1300;
  -webkit-animation: DASH 1s linear 4s forwards;
  -moz-animation: DASH 1s linear 4s forwards;
  animation: DASH 1s linear 4s forwards;
}
@media only screen and (max-width: 62.5em) {
  .home-header__hero .arrow-svg {
    left: 60%;
    top: 53rem;
    -webkit-transform: rotate(280deg) scaleX(-1);
    -moz-transform: rotate(280deg) scaleX(-1);
    transform: rotate(280deg) scaleX(-1);
  }
}
@media only screen and (max-width: 30em) {
  .home-header__hero .arrow-svg {
    width: 20rem;
  }
}
@media only screen and (max-width: 25em) {
  .home-header__hero .arrow-svg {
    width: 15rem;
  }
}
@media only screen and (max-width: 22em) {
  .home-header__hero .arrow-svg {
    top: 47rem;
  }
}
.home-header__h1 {
  font-family: GT Walsheim Pro Bold, sans-serif;
  font-size: 6.4rem;
  line-height: 9rem;
  color: var(--color-white);
  overflow: hidden;
}
@media only screen and (max-width: 25em) {
  .home-header__h1 {
    margin-top: -35rem;
    font-size: 5rem;
    line-height: 7rem;
  }
}
.home-header__h1 span {
  display: block;
}
.home-header__h1--span2 {
  display: -webkit-flex;
  display: -moz-box;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  align-items: center;
  justify-items: center;
  position: relative;
}
.home-header__h1--span2 .oval-svg {
  position: absolute;
  left: 9.5rem;
  top: 1rem;
}
@media only screen and (max-width: 62.5em) {
  .home-header__h1--span2 .oval-svg {
    display: none;
  }
}
@media only screen and (max-width: 25em) {
  .home-header__h1--span2 .oval-svg {
    left: 8rem;
    top: -0.1rem;
    height: 7rem;
  }
}
.home-header__h1--span2 .oval-svg path {
  stroke: var(--color-primary);
  fill: var(--color-primary);
  fill-opacity: 0;
  stroke-width: 0.4;
  stroke-dasharray: 1300;
  stroke-dashoffset: 1300;
  -webkit-animation: DASH 1s linear 3s forwards;
  -moz-animation: DASH 1s linear 3s forwards;
  animation: DASH 1s linear 3s forwards;
}
.home-header__h1--span3 {
  font-size: 96px;
  background: linear-gradient(
    147deg,
    rgba(249, 15, 216, 1) 0%,
    rgba(245, 67, 119, 1) 26%,
    rgba(252, 28, 28, 1) 50%,
    rgba(255, 195, 13, 1) 75%,
    rgba(114, 251, 89, 1) 100%
  );
  background-size: cover;
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
}
.home-header__h1 small {
  font-size: 4.3rem;
}
.home-header__h5 {
  margin-top: 3rem;
  font-size: 2.4rem;
  line-height: 3rem;
  color: var(--color-gray);
  font-weight: 100;
}
@media only screen and (max-width: 25em) {
  .home-header__h1--span3 {
    font-size: 66px;
  }
  .home-header__h5 {
    font-size: 2rem;
  }
  .home-header__h5 br {
    display: none;
  }
}
.home-header__img {
  position: absolute;
  height: 64rem;
  top: -8rem;
  left: -30rem;
  z-index: 1;
}
@media only screen and (max-width: 80em) {
  .home-header__img {
    height: 60rem;
    left: -25rem;
  }
}
@media only screen and (max-width: 75em) {
  .home-header__img {
    top: -2rem;
    left: -20rem;
    height: 50rem;
  }
}
@media only screen and (max-width: 62.5em) {
  .home-header__img {
    top: 5rem;
    left: -40rem;
    height: 45rem;
  }
}
@media only screen and (max-width: 30em) {
  .home-header__img {
    top: 10rem;
    left: -42rem;
  }
}
@media only screen and (max-width: 22em) {
  .home-header__img {
    height: 35rem;
    top: 0;
    left: -32rem;
  }
}
.home-header__bottom {
  margin-top: 18rem;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
  grid-gap: 4rem;
}
@media only screen and (max-width: 62.5em) {
  .home-header__bottom {
    display: none;
  }
}
.home-header__h2 {
  font-family: GT Walsheim Pro Bold, sans-serif;
  font-size: 4.8rem;
  line-height: 5rem;
  color: var(--color-white);
}
.home-header__p {
  font-size: 1.6rem;
  line-height: 2rem;
  color: var(--color-gray);
}
.section-why {
  grid-column: 2/14;
  padding: 6rem;
  margin-top: 15rem;
}
@media only screen and (max-width: 30em) {
  .section-why {
    margin-top: 4rem !important;
  }
}
.section-why__container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
  grid-gap: 4rem;
  grid-column-gap: 15rem;
}
@media only screen and (max-width: 62.5em) {
  .section-why__container {
    margin-top: -44rem;
    grid-template-columns: repeat(auto-fit, minmax(45rem, 1fr));
    place-content: center;
    place-items: center;
    text-align: center;
    grid-row-gap: 6rem;
  }
}
@media only screen and (max-width: 45.5em) {
  .section-why__container {
    grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
  }
}
.section-why__box img {
  margin-bottom: 4rem;
}
.section-why__h2 {
  font-family: GT Walsheim Pro Bold, sans-serif;
  font-size: 2.4rem;
  line-height: 2.7rem;
  color: var(--color-white);
  margin-bottom: 1rem;
}
.section-why__p {
  font-size: 1.6rem;
  line-height: 2.4rem;
  color: var(--color-gray);
}
.section-features {
  grid-column: 2/14;
  padding: 6rem;
  margin-top: 20rem;
}
@media only screen and (max-width: 30em) {
  .section-features {
    margin-top: 4rem !important;
  }
}
.section-features__box {
  display: -webkit-flex;
  display: -moz-box;
  display: flex;
  -webkit-align-items: flex-start;
  -moz-box-align: start;
  align-items: flex-start;
}
/* ... */

